handle request error

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "lite-http-tunnel-server",
   "version": "0.0.1",
   "main": "server.js",
+  "engines": {
+    "node": ">=14.0"
+  },
   "author": {
     "name": "Embbnux Ji",
     "url": "https://github.com/embbnux"
